Municipality Projects New files added - [MunicipalityProjects.css,MunicipalityProjects.js,MunicipalityProjects.variables.json,MunicipalityProjects.html,MunicipalityProjects] Files modified - [pages-config.json,Cx2QueryExecutorServiceImpl.java,cx2-queries.hbm.xml,QueryExecutionController.java,servicedef.xml,MyMunicipality.variables.json,cx2_query.json,Cx2QueryExecutorService.java,MyMunicipality.html,app.variables.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -130,6 +130,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MunicipalityProjects",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MunicipalitySettings",
   "type" : "PAGE",
   "params" : [ ]
