--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -388,6 +388,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MunicipalityProjects" : {
+    "_id" : "wm-goToPage_MunicipalityProjects-wm.NavigationVariable-1487582313953",
+    "name" : "goToPage_MunicipalityProjects",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MunicipalityProjects",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MunicipalitySettings" : {
     "_id" : "wm-goToPage_MunicipalitySettings-wm.NavigationVariable-1479365831697",
     "name" : "goToPage_MunicipalitySettings",
