--- a/src/main/webapp/pages/ProjectsDevDataEntry/ProjectsDevDataEntry.variables.json
+++ b/src/main/webapp/pages/ProjectsDevDataEntry/ProjectsDevDataEntry.variables.json
@@ -1,4 +1,439 @@
 {
+  "Cx2StandardViewsData" : {
+    "_id" : "wm-Cx2StandardViewsData-wm.LiveVariable-1487588112075",
+    "name" : "Cx2StandardViewsData",
+    "owner" : "Page",
+    "category" : "wm.LiveVariable",
+    "dataBinding" : [ ],
+    "operation" : "read",
+    "dataSet" : [ ],
+    "type" : "StandardViews",
+    "isList" : true,
+    "saveInPhonegap" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "inFlightBehavior" : "executeLast",
+    "startUpdate" : true,
+    "autoUpdate" : true,
+    "transformationRequired" : false,
+    "liveSource" : "cx2",
+    "ignoreCase" : true,
+    "matchMode" : "start",
+    "propertiesMap" : {
+      "columns" : [ {
+        "fieldName" : "id",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "ID",
+        "isPrimaryKey" : true,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "identity",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
+      }, {
+        "fieldName" : "viewName",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
+        "columnName" : "ViewName",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 255,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
+      }, {
+        "fieldName" : "viewDescription",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
+        "columnName" : "ViewDescription",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 255,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
+      } ],
+      "entityName" : "StandardViews",
+      "fullyQualifiedName" : "com.civicxpress.cx2.StandardViews",
+      "tableType" : "TABLE",
+      "primaryFields" : [ "id" ]
+    },
+    "isDefault" : true,
+    "bindCount" : 1,
+    "tableName" : "StandardViews",
+    "tableType" : "TABLE",
+    "properties" : [ ],
+    "relatedTables" : [ ],
+    "package" : "com.civicxpress.cx2.StandardViews"
+  },
+  "Cx2UserViewPreferencesData" : {
+    "_id" : "wm-Cx2UserViewPreferencesData-wm.LiveVariable-1487588224968",
+    "name" : "Cx2UserViewPreferencesData",
+    "owner" : "Page",
+    "category" : "wm.LiveVariable",
+    "dataBinding" : [ ],
+    "operation" : "read",
+    "dataSet" : [ ],
+    "type" : "UserViewPreferences",
+    "isList" : true,
+    "saveInPhonegap" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "inFlightBehavior" : "executeLast",
+    "startUpdate" : true,
+    "autoUpdate" : true,
+    "transformationRequired" : false,
+    "liveSource" : "cx2",
+    "ignoreCase" : true,
+    "matchMode" : "start",
+    "propertiesMap" : {
+      "columns" : [ {
+        "fieldName" : "users",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "UserId",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : true,
+        "defaultValue" : "",
+        "relatedTableName" : "Users",
+        "relatedEntityName" : "Users",
+        "relatedColumnName" : "userId",
+        "relatedFieldName" : "users.id",
+        "isList" : false,
+        "targetTable" : "Users",
+        "scale" : 0,
+        "columns" : [ {
+          "fieldName" : "states",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "StateId",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "stateId",
+          "targetTable" : "States",
+          "scale" : 0
+        }, {
+          "fieldName" : "id",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ID",
+          "isPrimaryKey" : true,
+          "notNull" : true,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "identity",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "firstName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "FirstName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "lastName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "LastName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "email",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Email",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "address1",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Address1",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "address2",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Address2",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "city",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "City",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "postalCode",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "PostalCode",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "phoneNumber",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "PhoneNumber",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "communicationFrequency",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "CommunicationFrequency",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "active",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "Active",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "photo",
+          "type" : "blob",
+          "fullyQualifiedType" : "blob",
+          "columnName" : "Photo",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 2147483647,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "scale" : 0
+        }, {
+          "fieldName" : "banned",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "Banned",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "scale" : 0
+        }, {
+          "fieldName" : "password",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Password",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "country",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Country",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "fullName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "FullName",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 511,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "systemInserted" : true,
+          "systemUpdated" : true,
+          "scale" : 0
+        } ]
+      }, {
+        "fieldName" : "standardViews",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "PreferenceId",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : true,
+        "defaultValue" : "",
+        "relatedTableName" : "StandardViews",
+        "relatedEntityName" : "StandardViews",
+        "relatedColumnName" : "preferenceId",
+        "relatedFieldName" : "standardViews.id",
+        "isList" : false,
+        "targetTable" : "StandardViews",
+        "scale" : 0,
+        "columns" : [ {
+          "fieldName" : "id",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ID",
+          "isPrimaryKey" : true,
+          "notNull" : true,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "identity",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "viewName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "ViewName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "viewDescription",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "ViewDescription",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        } ]
+      }, {
+        "fieldName" : "id",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "ID",
+        "isPrimaryKey" : true,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "identity",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
+      } ],
+      "entityName" : "UserViewPreferences",
+      "fullyQualifiedName" : "com.civicxpress.cx2.UserViewPreferences",
+      "tableType" : "TABLE",
+      "primaryFields" : [ "id" ]
+    },
+    "isDefault" : true,
+    "bindCount" : 1,
+    "tableName" : "UserViewPreferences",
+    "tableType" : "TABLE",
+    "properties" : [ "users", "standardViews" ],
+    "relatedTables" : [ {
+      "columnName" : "users",
+      "relationName" : "users",
+      "type" : "Users",
+      "watchOn" : "Cx2UsersData",
+      "package" : "com.civicxpress.cx2.UserViewPreferences"
+    }, {
+      "columnName" : "standardViews",
+      "relationName" : "standardViews",
+      "type" : "StandardViews",
+      "watchOn" : "Cx2StandardViewsData",
+      "package" : "com.civicxpress.cx2.UserViewPreferences"
+    } ],
+    "package" : "com.civicxpress.cx2.UserViewPreferences"
+  },
   "ProjectsData" : {
     "_id" : "wm-ProjectsData-wm.LiveVariable-1487157099321",
     "name" : "ProjectsData",
