- Fixed various stuff with vendors/owners/etc on new forms Files modified - [pages-config.json,FormController.java,NewForm.js,QueryExecutionController.java,cx2-queries.hbm.xml,Forms.html,DBUtils.jar,Cx2QueryExecutorServiceImpl.java,NewForm.variables.json,FormService.java,servicedef.xml,Forms.variables.json,Forms.css,cx2_query.json,Cx2QueryExecutorService.java,NewForm.html]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -185,6 +185,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "UserProjects",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "VendorApplication",
   "type" : "PAGE",
   "params" : [ ]
