--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -90,6 +90,10 @@
     "type" : "string"
   } ]
 }, {
+  "name" : "ManageMuncipalityGroups",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
   "params" : [ ]
@@ -157,6 +161,10 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "NewFrom",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ProcessForms",
   "type" : "PAGE",
   "params" : [ ]
@@ -182,6 +190,10 @@
   "params" : [ ]
 }, {
   "name" : "UserOpenForms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "UserProjects",
   "type" : "PAGE",
   "params" : [ ]
 }, {
