--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -71,6 +71,14 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MCNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MCNewResidentialStructure",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -161,7 +169,7 @@
     "type" : "integer"
   } ]
 }, {
-  "name" : "NewFrom",
+  "name" : "PUDApplication",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -174,6 +182,14 @@
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -190,10 +206,6 @@
   "params" : [ ]
 }, {
   "name" : "UserOpenForms",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "UserProjects",
   "type" : "PAGE",
   "params" : [ ]
 }, {
