added delete success toaster, cleaned up create dialog on both pages, sorted muni selects alphabetically by muniname Files modified - [pages-config.json,MyProjects.html,MyProjects.variables.json,MunicipalityProjects.html]

--- a/src/main/webapp/pages/MyProjects/MyProjects.variables.json
+++ b/src/main/webapp/pages/MyProjects/MyProjects.variables.json
@@ -1154,7 +1154,7 @@
     "isList" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "onSuccess" : "Widgets.confirmdialogSoftDeleteProjectCo.close();Variables.UserAndSharedWith.invoke()",
+    "onSuccess" : "Widgets.confirmdialogSoftDeleteProjectCo.close();Variables.UserAndSharedWith.invoke();Variables.SoftDeleteSuccess.invoke()",
     "startUpdate" : false,
     "autoUpdate" : false,
     "inFlightBehavior" : "executeLast",
@@ -1162,6 +1162,34 @@
     "saveInPhonegap" : false,
     "controller" : "QueryExecution",
     "spinnerContext" : "gridProjectsList"
+  },
+  "SoftDeleteSuccess" : {
+    "_id" : "wm-SoftDeleteSuccess-wm.NotificationVariable-1487687355475",
+    "name" : "SoftDeleteSuccess",
+    "owner" : "Page",
+    "category" : "wm.NotificationVariable",
+    "dataBinding" : [ {
+      "target" : "content",
+      "value" : "inline",
+      "type" : "string"
+    }, {
+      "target" : "text",
+      "value" : "The Project has been deleted",
+      "type" : "string"
+    }, {
+      "target" : "duration",
+      "value" : "2000",
+      "type" : "number"
+    }, {
+      "target" : "class",
+      "value" : "Success",
+      "type" : "string"
+    }, {
+      "target" : "toasterPosition",
+      "value" : "bottom right",
+      "type" : "string"
+    } ],
+    "operation" : "toast"
   },
   "StandardUserMunicipalites" : {
     "_id" : "wm-StandardUserMunicipalites-wm.ServiceVariable-1486716405780",
