- Added EULA to GlobalSettings - Added EULA as required for signing up as a new user Files modified - [UserCreation.js,CXGlobalSettings.variables.json,cx2_published_dataModel.json,UserCreation.html,project-security.xml,servicedef.xml,UserCreation.variables.json,intercept-urls.json,CXGlobalSettings.html,GlobalSettings.java,UserViewPreferencesController.java,pages-config.json]

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
@@ -280,6 +280,18 @@
         "isRelated" : false,
         "defaultValue" : "",
         "scale" : 0
+      }, {
+        "fieldName" : "cxeula",
+        "type" : "text",
+        "fullyQualifiedType" : "text",
+        "columnName" : "CXEULA",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 8000,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "scale" : 0
       } ],
       "entityName" : "GlobalSettings",
       "fullyQualifiedName" : "com.civicxpress.cx2.GlobalSettings",
@@ -499,6 +511,18 @@
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
+        "scale" : 0
+      }, {
+        "fieldName" : "cxeula",
+        "type" : "text",
+        "fullyQualifiedType" : "text",
+        "columnName" : "CXEULA",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 8000,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
         "scale" : 0
       } ],
       "entityName" : "GlobalSettings",
