Recrding Modified Date when changes made to ProjectDetails and description Files modified - [Cx2QueryExecutorServiceImpl.java,ViewProject.js,cx2-queries.hbm.xml,QueryExecutionController.java,servicedef.xml,NewForm.html,cx2_query.json,ViewProject.variables.json,Cx2QueryExecutorService.java]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -6592,6 +6592,34 @@
     "filterFields" : { },
     "package" : "com.civicxpress.cx2.ProjectTasks"
   },
+  "SetModifiedDateForProject" : {
+    "_id" : "wm-SetModifiedDateForProject-wm.ServiceVariable-1487751544440",
+    "name" : "SetModifiedDateForProject",
+    "owner" : "Page",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ {
+      "target" : "project",
+      "value" : "bind:pageParams.ProjectGUID",
+      "type" : "string"
+    } ],
+    "type" : "cx2SetModifiedDateForProjectrtnType",
+    "service" : "cx2",
+    "operation" : "executeSetModifiedDateForProject",
+    "operationId" : "QueryExecutionController_executeSetModifiedDateForProject",
+    "operationType" : "put",
+    "serviceType" : "DataService",
+    "dataSet" : [ ],
+    "isList" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "startUpdate" : false,
+    "autoUpdate" : false,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "controller" : "QueryExecution",
+    "spinnerContext" : "page"
+  },
   "Subdivisions" : {
     "_id" : "wm-Subdivisions-wm.LiveVariable-1487052397024",
     "name" : "Subdivisions",
@@ -7176,7 +7204,7 @@
     "isList" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "onSuccess" : "Widgets.dialogEditProjectDescription.close();Variables.CurrentProject.listRecords();Variables.UpdateDescriptionSuccess.invoke()",
+    "onSuccess" : "Widgets.dialogEditProjectDescription.close();Variables.CurrentProject.listRecords();Variables.UpdateDescriptionSuccess.invoke();UpdateProjectDescriptiononSuccess($event, $scope)",
     "startUpdate" : false,
     "autoUpdate" : false,
     "inFlightBehavior" : "executeLast",
@@ -7220,7 +7248,7 @@
     "isList" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "onSuccess" : "Variables.DetailsUpdatedSuccessfully.invoke()",
+    "onSuccess" : "Variables.DetailsUpdatedSuccessfully.invoke();UpdateProjectDetailsonSuccess($event, $scope)",
     "startUpdate" : false,
     "autoUpdate" : false,
     "inFlightBehavior" : "executeLast",
