--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -3374,7 +3374,7 @@
       "type" : "string"
     }, {
       "target" : "name",
-      "value" : "bind:Widgets.textProjectName.datavalue",
+      "value" : "bind:Widgets.textProjectTitle.datavalue",
       "type" : "string"
     }, {
       "target" : "endAt",
