--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -2453,6 +2453,30 @@
     "filterFields" : { },
     "package" : "com.civicxpress.cx2.Users"
   },
+  "GetMessageIdForCurrentPost" : {
+    "_id" : "wm-GetMessageIdForCurrentPost-wm.ServiceVariable-1487767434815",
+    "name" : "GetMessageIdForCurrentPost",
+    "owner" : "Page",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ ],
+    "type" : "cx2GetRecentMessageIdrtnType",
+    "service" : "cx2",
+    "operation" : "executeGetRecentMessageId",
+    "operationId" : "QueryExecutionController_executeGetRecentMessageId",
+    "operationType" : "get",
+    "serviceType" : "DataService",
+    "dataSet" : [ ],
+    "isList" : true,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "onSuccess" : "GetMessageIdForCurrentPostonSuccess($event, $scope)",
+    "startUpdate" : false,
+    "autoUpdate" : false,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "controller" : "QueryExecution"
+  },
   "GetSelectedTaskDetails" : {
     "_id" : "wm-GetSelectedTaskDetails-wm.ServiceVariable-1487329310504",
     "name" : "GetSelectedTaskDetails",
@@ -4143,6 +4167,426 @@
     } ],
     "pageTransitions" : "none"
   },
+  "InsertTaggedPeople" : {
+    "_id" : "wm-InsertTaggedPeople-wm.LiveVariable-1487767999750",
+    "name" : "InsertTaggedPeople",
+    "owner" : "Page",
+    "category" : "wm.LiveVariable",
+    "dataBinding" : [ ],
+    "operation" : "insert",
+    "dataSet" : [ ],
+    "type" : "FormMessageTagging",
+    "isList" : false,
+    "saveInPhonegap" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "inFlightBehavior" : "executeLast",
+    "startUpdate" : false,
+    "autoUpdate" : false,
+    "transformationRequired" : false,
+    "liveSource" : "cx2",
+    "ignoreCase" : true,
+    "matchMode" : "start",
+    "propertiesMap" : {
+      "columns" : [ {
+        "fieldName" : "users",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "TaggedPersonId",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : true,
+        "defaultValue" : "",
+        "relatedTableName" : "Users",
+        "relatedEntityName" : "Users",
+        "relatedColumnName" : "taggedPersonId",
+        "relatedFieldName" : "users.id",
+        "isList" : false,
+        "targetTable" : "Users",
+        "scale" : 0,
+        "columns" : [ {
+          "fieldName" : "states",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "StateId",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "stateId",
+          "targetTable" : "States",
+          "scale" : 0
+        }, {
+          "fieldName" : "id",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ID",
+          "isPrimaryKey" : true,
+          "notNull" : true,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "identity",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "firstName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "FirstName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "lastName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "LastName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "email",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Email",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "address1",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Address1",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "address2",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Address2",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "city",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "City",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "postalCode",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "PostalCode",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "phoneNumber",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "PhoneNumber",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "communicationFrequency",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "CommunicationFrequency",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "active",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "Active",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "photo",
+          "type" : "blob",
+          "fullyQualifiedType" : "blob",
+          "columnName" : "Photo",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 2147483647,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "scale" : 0
+        }, {
+          "fieldName" : "banned",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "Banned",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "scale" : 0
+        }, {
+          "fieldName" : "password",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Password",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "country",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Country",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "fullName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "FullName",
+          "isPrimaryKey" : false,
+          "notNull" : true,
+          "length" : 511,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "systemInserted" : true,
+          "systemUpdated" : true,
+          "scale" : 0
+        } ]
+      }, {
+        "fieldName" : "formMessages",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "FormMessageId",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : true,
+        "defaultValue" : "",
+        "relatedTableName" : "FormMessages",
+        "relatedEntityName" : "FormMessages",
+        "relatedColumnName" : "formMessageId",
+        "relatedFieldName" : "formMessages.id",
+        "isList" : false,
+        "targetTable" : "FormMessages",
+        "scale" : 0,
+        "columns" : [ {
+          "fieldName" : "masterForms",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "RelatedFormGUID",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "relatedFormGuid",
+          "targetTable" : "MasterForms",
+          "scale" : 0
+        }, {
+          "fieldName" : "projects",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "RelatedProjectGUID",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 32,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "relatedProjectGuid",
+          "targetTable" : "Projects",
+          "scale" : 0
+        }, {
+          "fieldName" : "users",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "UserId",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "userId",
+          "targetTable" : "Users",
+          "scale" : 0
+        }, {
+          "fieldName" : "id",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ID",
+          "isPrimaryKey" : true,
+          "notNull" : true,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "identity",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "message",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Message",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 2000,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "postedAt",
+          "type" : "timestamp",
+          "fullyQualifiedType" : "timestamp",
+          "columnName" : "PostedAt",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "municipalityMessage",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "MunicipalityMessage",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "FALSE",
+          "scale" : 0
+        } ]
+      }, {
+        "fieldName" : "id",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "ID",
+        "isPrimaryKey" : true,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "identity",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
+      } ],
+      "entityName" : "FormMessageTagging",
+      "fullyQualifiedName" : "com.civicxpress.cx2.FormMessageTagging",
+      "tableType" : "TABLE",
+      "primaryFields" : [ "id" ]
+    },
+    "spinnerContext" : "page",
+    "tableName" : "FormMessageTagging",
+    "tableType" : "TABLE",
+    "properties" : [ "users", "formMessages" ],
+    "relatedTables" : [ {
+      "columnName" : "users",
+      "relationName" : "users",
+      "type" : "Users",
+      "watchOn" : "Cx2UsersData",
+      "package" : "com.civicxpress.cx2.FormMessageTagging"
+    }, {
+      "columnName" : "formMessages",
+      "relationName" : "formMessages",
+      "type" : "FormMessages",
+      "watchOn" : "Cx2FormMessagesData",
+      "package" : "com.civicxpress.cx2.FormMessageTagging"
+    } ],
+    "filterFields" : { },
+    "inputFields" : { },
+    "package" : "com.civicxpress.cx2.FormMessageTagging"
+  },
   "InsertTask" : {
     "_id" : "wm-InsertTask-wm.LiveVariable-1487322426250",
     "name" : "InsertTask",
@@ -5413,6 +5857,48 @@
     "saveInPhonegap" : false,
     "controller" : "QueryExecution",
     "spinnerContext" : "viewAddFormsToProject"
+  },
+  "PostFormMessage" : {
+    "_id" : "wm-PostFormMessage-wm.ServiceVariable-1487767571955",
+    "name" : "PostFormMessage",
+    "owner" : "Page",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ {
+      "target" : "UserId",
+      "value" : "bind:Variables.CurrentUserDetails.dataSet.id",
+      "type" : "integer"
+    }, {
+      "target" : "RelatedFormGUID",
+      "value" : "bind:pageParams.ProjectGUID",
+      "type" : "string"
+    }, {
+      "target" : "Message",
+      "value" : "bind:Widgets.textAddMessage.datavalue",
+      "type" : "string"
+    }, {
+      "target" : "PostedAt",
+      "value" : "bind:today",
+      "type" : "string"
+    } ],
+    "type" : "cx2InsertFormMessagertnType",
+    "service" : "cx2",
+    "operation" : "executeInsertFormMessage",
+    "operationId" : "QueryExecutionController_executeInsertFormMessage",
+    "operationType" : "post",
+    "serviceType" : "DataService",
+    "dataSet" : [ ],
+    "isList" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "onSuccess" : "Variables.FormMessagesData.listRecords();PostFormMessageonSuccess($event, $scope)",
+    "startUpdate" : false,
+    "autoUpdate" : true,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "controller" : "QueryExecution",
+    "spinnerContext" : "livelistFormMessages",
+    "spinnerMessage" : "Posting your Message....."
   },
   "PredecessorForSelectedTask" : {
     "_id" : "wm-PredecessorForSelectedTask-wm.LiveVariable-1487756309381",
