- Removed encoding from ProjectDescription field, as the database type has been converted to nvarchar to solve problems. Files modified - [CXGlobalSettings.variables.json,ViewProject.js,Forms.variables.json,ViewProject.html,ViewProject.variables.json,Forms.js]

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
@@ -287,7 +287,7 @@
         "columnName" : "CXEULA",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 8000,
+        "length" : 2147483647,
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
@@ -519,7 +519,7 @@
         "columnName" : "CXEULA",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 8000,
+        "length" : 2147483647,
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
