--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -1218,7 +1218,7 @@
       "tableType" : "TABLE",
       "primaryFields" : [ "projectGuid" ]
     },
-    "bindCount" : 7,
+    "bindCount" : 8,
     "spinnerContext" : "page",
     "tableName" : "Projects",
     "tableType" : "TABLE",
@@ -9743,6 +9743,10 @@
     "dataBinding" : [ {
       "target" : "project",
       "value" : "bind:pageParams.ProjectGUID",
+      "type" : "string"
+    }, {
+      "target" : "ProjectDescription",
+      "value" : "bind:Widgets.richtexteditorUpdateDescription.datavalue",
       "type" : "string"
     } ],
     "type" : "cx2UpdateProjectDescriptionrtnType",
