atob and btoa changes Files modified - [pages-config.json,MunicipalityProjects.js,MyProjects.variables.json,MyProjects.js,MunicipalityProjects.variables.json]

--- a/src/main/webapp/pages/MunicipalityProjects/MunicipalityProjects.variables.json
+++ b/src/main/webapp/pages/MunicipalityProjects/MunicipalityProjects.variables.json
@@ -99,6 +99,10 @@
       "target" : "active",
       "value" : true,
       "type" : "boolean"
+    }, {
+      "target" : "projectDescription",
+      "value" : "bind:Widgets.richtexteditorProjectDescription.datavalue",
+      "type" : "string"
     } ],
     "operation" : "insert",
     "dataSet" : [ ],
