JavaSerivce to send Mail when task is assigned New files added - [ProjectTaskAssignment.spring.xml,README.md,ProjectTaskAssignment.java,ProjectTaskAssignmentController.java,servicedef.xml] Files modified - [project-services.xml,pom.xml]

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/ProjectTaskAssignment/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/ResetPasswordMailService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -155,6 +162,7 @@
                                 <source>services/FormMessagingMailService/src</source>
                                 <source>services/FormService/src</source>
                                 <source>services/FormStatusUpdate/src</source>
+                                <source>services/ProjectTaskAssignment/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
                                 <source>services/UpdateRecordStatus/src</source>
                                 <source>services/cx2/src</source>
