Send Mail to Person when task assigned to him Files modified - [ViewProject.js,ViewProject.variables.json,ProjectTaskAssignment.java,ProjectTaskAssignmentController.java]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -152,6 +152,47 @@
     "controller" : "QueryExecution",
     "spinnerContext" : "viewAddMember"
   },
+  "AssignedTaskMail" : {
+    "_id" : "wm-AssignedTaskMail-wm.ServiceVariable-1487849129437",
+    "name" : "AssignedTaskMail",
+    "owner" : "Page",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ {
+      "target" : "emailSubject",
+      "value" : "You have been assigned a project task",
+      "type" : "string"
+    }, {
+      "target" : "municipalitySignature",
+      "value" : "bind:Variables.CurrentProject.dataSet.data[$i].municipalities.globalEmailSig",
+      "type" : "string"
+    }, {
+      "target" : "projectGUID",
+      "value" : "bind:pageParams.ProjectGUID",
+      "type" : "string"
+    }, {
+      "target" : "projectName",
+      "value" : "bind:Variables.CurrentProject.dataSet.data[$i].projectName",
+      "type" : "string"
+    } ],
+    "type" : "string",
+    "service" : "ProjectTaskAssignment",
+    "operation" : "sendAssignedTaskMail",
+    "operationId" : "ProjectTaskAssignmentController_sendAssignedTaskMail",
+    "operationType" : "get",
+    "serviceType" : "JavaService",
+    "dataSet" : [ ],
+    "isList" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "startUpdate" : false,
+    "autoUpdate" : false,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "controller" : "ProjectTaskAssignment",
+    "spinnerContext" : "page",
+    "spinnerMessage" : "Sending Notification Mail to Assigned Person"
+  },
   "BreadCrum" : {
     "_id" : "wm-BreadCrum-wm.Variable-1486965868009",
     "name" : "BreadCrum",
@@ -4644,7 +4685,7 @@
     "saveInPhonegap" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "onSuccess" : "Widgets.dialogAddtask.close();Variables.ProjectTasksData.listRecords()",
+    "onSuccess" : "Widgets.dialogAddtask.close();Variables.ProjectTasksData.listRecords();InsertTaskonSuccess($event, $scope)",
     "inFlightBehavior" : "executeLast",
     "startUpdate" : false,
     "autoUpdate" : false,
