Sending Mail when Assigned to person is changed in edit task Files modified - [ViewProject.js,ViewProject.variables.json]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -9914,7 +9914,7 @@
     "saveInPhonegap" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "onSuccess" : "Widgets.dialogUpdateTask.close();Variables.ProjectTasksData.listRecords()",
+    "onSuccess" : "Widgets.dialogUpdateTask.close();Variables.ProjectTasksData.listRecords();UpdateTaskonSuccess($event, $scope)",
     "inFlightBehavior" : "executeLast",
     "startUpdate" : false,
     "autoUpdate" : false,
