Messaging for forms Files modified - [ViewProject.css,pages-config.json,cx2_published_dataModel.json,ViewProject.html,Forms.css,ViewProject.variables.json,Forms.html,Projects.java,db-connection-settings.json]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -1170,7 +1170,7 @@
         "columnName" : "ProjectDescription",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 2147483647,
+        "length" : 1000,
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
@@ -1789,7 +1789,7 @@
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
-          "length" : 2147483647,
+          "length" : 1000,
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
@@ -5213,7 +5213,7 @@
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
-          "length" : 2147483647,
+          "length" : 1000,
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
@@ -5412,7 +5412,7 @@
             "columnName" : "ProjectDescription",
             "isPrimaryKey" : false,
             "notNull" : false,
-            "length" : 2147483647,
+            "length" : 1000,
             "precision" : 0,
             "generator" : "assigned",
             "isRelated" : false,
@@ -6552,7 +6552,7 @@
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
-          "length" : 2147483647,
+          "length" : 1000,
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
@@ -6751,7 +6751,7 @@
             "columnName" : "ProjectDescription",
             "isPrimaryKey" : false,
             "notNull" : false,
-            "length" : 2147483647,
+            "length" : 1000,
             "precision" : 0,
             "generator" : "assigned",
             "isRelated" : false,
@@ -8036,7 +8036,7 @@
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
-          "length" : 2147483647,
+          "length" : 1000,
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
@@ -8543,7 +8543,7 @@
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
-          "length" : 2147483647,
+          "length" : 1000,
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
@@ -8742,7 +8742,7 @@
             "columnName" : "ProjectDescription",
             "isPrimaryKey" : false,
             "notNull" : false,
-            "length" : 2147483647,
+            "length" : 1000,
             "precision" : 0,
             "generator" : "assigned",
             "isRelated" : false,
@@ -10442,7 +10442,7 @@
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
-          "length" : 2147483647,
+          "length" : 1000,
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
@@ -10641,7 +10641,7 @@
             "columnName" : "ProjectDescription",
             "isPrimaryKey" : false,
             "notNull" : false,
-            "length" : 2147483647,
+            "length" : 1000,
             "precision" : 0,
             "generator" : "assigned",
             "isRelated" : false,
