MunicipalityAdmin/Employee delete functionality update New files added - [Test.variables.json,Test.html,TestRichTextDao.java,TestRichTextController.java,TestRichText.java,TestRichTextService.java,Test.js,TestRichTextServiceImpl.java,Test.css,Test] Files modified - [pages-config.json,cx2_published_dataModel.json,QueryExecutionController.java,cx2-queries.hbm.xml,MyProjects.variables.json,ViewProject.variables.json,app.variables.json,MunicipalityUsers.variables.json,Cx2QueryExecutorServiceImpl.java,MunicipalityUsers.html,MunicipalityUsers.js,servicedef.xml,Forms.variables.json,cx2_query.json,Cx2QueryExecutorService.java,db-connection-settings.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -531,6 +531,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_Test" : {
+    "_id" : "wm-goToPage_Test-wm.NavigationVariable-1488178862265",
+    "name" : "goToPage_Test",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "Test",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_UserClosedForms" : {
     "_id" : "wm-goToPage_UserClosedForms-wm.NavigationVariable-1482831972576",
     "name" : "goToPage_UserClosedForms",
