--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -197,6 +197,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "Test",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "UserClosedForms",
   "type" : "PAGE",
   "params" : [ ]
