--- a/src/main/webapp/pages/MyProjects/MyProjects.variables.json
+++ b/src/main/webapp/pages/MyProjects/MyProjects.variables.json
@@ -1011,15 +1011,16 @@
         "scale" : 0
       }, {
         "fieldName" : "projectDescription",
-        "type" : "text",
-        "fullyQualifiedType" : "text",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
         "columnName" : "ProjectDescription",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 2147483647,
+        "length" : 1000,
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
+        "defaultValue" : "",
         "scale" : 0
       }, {
         "fieldName" : "projectGoals",
