--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -1165,8 +1165,8 @@
         "scale" : 0
       }, {
         "fieldName" : "projectDescription",
-        "type" : "text",
-        "fullyQualifiedType" : "text",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
         "columnName" : "ProjectDescription",
         "isPrimaryKey" : false,
         "notNull" : false,
@@ -1174,6 +1174,7 @@
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
+        "defaultValue" : "",
         "scale" : 0
       }, {
         "fieldName" : "projectGoals",
@@ -1784,8 +1785,8 @@
           "scale" : 0
         }, {
           "fieldName" : "projectDescription",
-          "type" : "text",
-          "fullyQualifiedType" : "text",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
@@ -1793,6 +1794,7 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
+          "defaultValue" : "",
           "scale" : 0
         }, {
           "fieldName" : "projectGoals",
@@ -5208,8 +5210,8 @@
           "scale" : 0
         }, {
           "fieldName" : "projectDescription",
-          "type" : "text",
-          "fullyQualifiedType" : "text",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
@@ -5217,6 +5219,7 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
+          "defaultValue" : "",
           "scale" : 0
         }, {
           "fieldName" : "projectGoals",
@@ -5407,8 +5410,8 @@
             "scale" : 0
           }, {
             "fieldName" : "projectDescription",
-            "type" : "text",
-            "fullyQualifiedType" : "text",
+            "type" : "string",
+            "fullyQualifiedType" : "string",
             "columnName" : "ProjectDescription",
             "isPrimaryKey" : false,
             "notNull" : false,
@@ -5416,6 +5419,7 @@
             "precision" : 0,
             "generator" : "assigned",
             "isRelated" : false,
+            "defaultValue" : "",
             "scale" : 0
           }, {
             "fieldName" : "projectGoals",
@@ -6547,8 +6551,8 @@
           "scale" : 0
         }, {
           "fieldName" : "projectDescription",
-          "type" : "text",
-          "fullyQualifiedType" : "text",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
@@ -6556,6 +6560,7 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
+          "defaultValue" : "",
           "scale" : 0
         }, {
           "fieldName" : "projectGoals",
@@ -6746,8 +6751,8 @@
             "scale" : 0
           }, {
             "fieldName" : "projectDescription",
-            "type" : "text",
-            "fullyQualifiedType" : "text",
+            "type" : "string",
+            "fullyQualifiedType" : "string",
             "columnName" : "ProjectDescription",
             "isPrimaryKey" : false,
             "notNull" : false,
@@ -6755,6 +6760,7 @@
             "precision" : 0,
             "generator" : "assigned",
             "isRelated" : false,
+            "defaultValue" : "",
             "scale" : 0
           }, {
             "fieldName" : "projectGoals",
@@ -8031,8 +8037,8 @@
           "scale" : 0
         }, {
           "fieldName" : "projectDescription",
-          "type" : "text",
-          "fullyQualifiedType" : "text",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
@@ -8040,6 +8046,7 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
+          "defaultValue" : "",
           "scale" : 0
         }, {
           "fieldName" : "projectGoals",
@@ -8538,8 +8545,8 @@
           "scale" : 0
         }, {
           "fieldName" : "projectDescription",
-          "type" : "text",
-          "fullyQualifiedType" : "text",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
@@ -8547,6 +8554,7 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
+          "defaultValue" : "",
           "scale" : 0
         }, {
           "fieldName" : "projectGoals",
@@ -8737,8 +8745,8 @@
             "scale" : 0
           }, {
             "fieldName" : "projectDescription",
-            "type" : "text",
-            "fullyQualifiedType" : "text",
+            "type" : "string",
+            "fullyQualifiedType" : "string",
             "columnName" : "ProjectDescription",
             "isPrimaryKey" : false,
             "notNull" : false,
@@ -8746,6 +8754,7 @@
             "precision" : 0,
             "generator" : "assigned",
             "isRelated" : false,
+            "defaultValue" : "",
             "scale" : 0
           }, {
             "fieldName" : "projectGoals",
@@ -10437,8 +10446,8 @@
           "scale" : 0
         }, {
           "fieldName" : "projectDescription",
-          "type" : "text",
-          "fullyQualifiedType" : "text",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
           "columnName" : "ProjectDescription",
           "isPrimaryKey" : false,
           "notNull" : false,
@@ -10446,6 +10455,7 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
+          "defaultValue" : "",
           "scale" : 0
         }, {
           "fieldName" : "projectGoals",
@@ -10636,8 +10646,8 @@
             "scale" : 0
           }, {
             "fieldName" : "projectDescription",
-            "type" : "text",
-            "fullyQualifiedType" : "text",
+            "type" : "string",
+            "fullyQualifiedType" : "string",
             "columnName" : "ProjectDescription",
             "isPrimaryKey" : false,
             "notNull" : false,
@@ -10645,6 +10655,7 @@
             "precision" : 0,
             "generator" : "assigned",
             "isRelated" : false,
+            "defaultValue" : "",
             "scale" : 0
           }, {
             "fieldName" : "projectGoals",
