Sample Statistics Demo to Jason New files added - [UserStatistics.js,UserStatistics.css,UserStatistics.html,UserStatistics.variables.json,UserStatistics] Files modified - [leftnav.html,Test.variables.json,pages-config.json,Test.html,TestRichText.java,app.variables.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -213,6 +213,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "UserStatistics",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "VendorApplication",
   "type" : "PAGE",
   "params" : [ ]
