--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -575,6 +575,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_UserStatistics" : {
+    "_id" : "wm-goToPage_UserStatistics-wm.NavigationVariable-1488198163131",
+    "name" : "goToPage_UserStatistics",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "UserStatistics",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_VendorApplication" : {
     "_id" : "wm-goToPage_VendorApplication-wm.NavigationVariable-1480415119127",
     "name" : "goToPage_VendorApplication",
