Added missing WHERE clause for updating CurrentPrefixNumber and PrefixNumberResentOn so that a billion errors don't begin to present themselves. Files modified - [pages-config.json,FormService.java]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -189,6 +189,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "UserProjects",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "UserStatistics",
   "type" : "PAGE",
   "params" : [ ]
