Inspections Dashboard New files added - [MunicipalityInspections.variables.json,MunicipalityInspections.html,MunicipalityInspections.css,MunicipalityInspections.js,MunicipalityInspections] Files modified - [pages-config.json,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -388,6 +388,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MunicipalityInspections" : {
+    "_id" : "wm-goToPage_MunicipalityInspections-wm.NavigationVariable-1488260207805",
+    "name" : "goToPage_MunicipalityInspections",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MunicipalityInspections",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MunicipalityProjects" : {
     "_id" : "wm-goToPage_MunicipalityProjects-wm.NavigationVariable-1487582313953",
     "name" : "goToPage_MunicipalityProjects",
