--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -130,6 +130,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MunicipalityInspections",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MunicipalityProjects",
   "type" : "PAGE",
   "params" : [ ]
