Inspections- InspectionDesign Table New files added - [Inspections.java,InspectionsController.java,InspectionsServiceImpl.java,ManageInspections.html,InspectionsService.java,ManageInspections.css,ManageInspections.js,ManageInspections.variables.json,InspectionsDao.java,ManageInspections] Files modified - [pages-config.json,cx2_published_dataModel.json,servicedef.xml,TestRichTextController.java,TestRichText.java,MunicipalityAdministration.html,MunicipalitiesController.java,Municipalities.java,MunicipalitiesServiceImpl.java,MunicipalitiesService.java,app.variables.json,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -57,6 +57,9 @@
     "table" : "GISRecords",
     "schema" : "cx2"
   }, {
+    "table" : "Inspections",
+    "schema" : "cx2"
+  }, {
     "table" : "GlobalSettings",
     "schema" : "cx2"
   }, {
@@ -114,7 +117,10 @@
     "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
-    "table" : "UserPasswordResetTokens",
+    "table" : "States",
+    "schema" : "cx2"
+  }, {
+    "table" : "TestRichText",
     "schema" : "cx2"
   }, {
     "table" : "Users",
@@ -123,13 +129,10 @@
     "table" : "Vendor",
     "schema" : "cx2"
   }, {
+    "table" : "UserPasswordResetTokens",
+    "schema" : "cx2"
+  }, {
     "table" : "UserSubscriptions",
-    "schema" : "cx2"
-  }, {
-    "table" : "States",
-    "schema" : "cx2"
-  }, {
-    "table" : "UserViewPreferences",
     "schema" : "cx2"
   }, {
     "table" : "VendorApprovals",
@@ -138,10 +141,10 @@
     "table" : "VendorLicenses",
     "schema" : "cx2"
   }, {
-    "table" : "VendorAdmins",
+    "table" : "UserViewPreferences",
     "schema" : "cx2"
   }, {
-    "table" : "VendorLicenseTypes",
+    "table" : "VendorAdmins",
     "schema" : "cx2"
   }, {
     "table" : "Vendors2Form",
@@ -150,7 +153,7 @@
     "table" : "VendorUsers",
     "schema" : "cx2"
   }, {
-    "table" : "TestRichText",
+    "table" : "VendorLicenseTypes",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
