--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -311,6 +311,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ManageInspections" : {
+    "_id" : "wm-goToPage_ManageInspections-wm.NavigationVariable-1488261921592",
+    "name" : "goToPage_ManageInspections",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageInspections",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ManageMunicipalities" : {
     "_id" : "wm-goToPage_ManageMunicipalities-wm.NavigationVariable-1478585524041",
     "name" : "goToPage_ManageMunicipalities",
