--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -98,6 +98,10 @@
     "type" : "string"
   } ]
 }, {
+  "name" : "ManageInspections",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageMuncipalityGroups",
   "type" : "PAGE",
   "params" : [ ]
